--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ body {
     </div>
 
 <div class="citation-section">
-  <h2>Citation</h2>
+  <h2>BibTeX 😊</h2>
   <p>If you use our dataset and metrics, please cite our work:</p>
   <div style="background: #f9f9f9; border: 1px solid #ccc; border-radius: 5px; padding: 1rem; position: relative;">
     <pre id="citation-text" style="margin: 0; font-family: monospace; font-size: 0.9rem; white-space: pre-wrap; word-wrap: break-word;">
