--- a/index.html
+++ b/index.html
@@ -349,11 +349,8 @@ body {
       <a class="btn-link" href="#" target="_blank">
         <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo logo-original">Paper
       </a>
-      <a class="btn-link" href="#" target="_blank">
+      <a class="btn-link" href="https://github.com/google-deepmind/physics-IQ-benchmark" target="_blank">
         <img src="assets/github-logo.png" alt="GitHub Logo" class="logo logo-bigger">Code
-      </a>
-      <a class="btn-link" href="#" target="_blank">
-        <img src="assets/huggingface-logo.png" alt="Hugging Face Logo" class="logo logo-original logo-bigger">HuggingFace
       </a>
       <a class="btn-link" href="#" target="_blank">
         <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
