--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
   background: #fff; /* Plain white background */
 }
 
-    .gif-container {
+   .gif-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,7 @@ body {
 
 .gif-header {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr); /* Matches the GIF grid */
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
@@ -48,8 +48,9 @@ body {
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr); /* Ensures alignment with headers */
   gap: 10px;
+  width: 100%; /* Ensure it aligns with the header width */
 }
 
 .gif-cell {
@@ -61,7 +62,7 @@ body {
 
 .gif-cell img {
   width: 100%;
-  max-width: 150px;
+  max-width: 150px; /* Adjust this if needed */
   height: auto;
   margin-bottom: 5px;
 }
