--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
   background: #fff; /* Plain white background */
 }
 
-   .gif-container {
+  .gif-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -38,19 +38,19 @@ body {
   grid-template-columns: repeat(5, 1fr); /* Matches the GIF grid */
   width: 100%;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px; /* Reduced spacing */
   font-weight: bold;
+  font-size: 14px; /* Smaller text size */
 }
 
 .gif-column-header {
-  padding: 5px 0;
+  padding: 2px 0; /* Smaller padding for alignment */
 }
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* Ensures alignment with headers */
+  grid-template-columns: repeat(5, auto); /* Keeps original GIF spacing */
   gap: 10px;
-  width: 100%; /* Ensure it aligns with the header width */
 }
 
 .gif-cell {
@@ -62,10 +62,11 @@ body {
 
 .gif-cell img {
   width: 100%;
-  max-width: 150px; /* Adjust this if needed */
+  max-width: 120px; /* Adjust to fit smaller GIFs */
   height: auto;
   margin-bottom: 5px;
 }
+
 
     
 
