--- a/index.html
+++ b/index.html
@@ -416,31 +416,29 @@ body {
 
 
 <div class="gif-container">
-  <div class="gif-header">
-    <div class="gif-column-header">Solid mechanics</div>
-    <div class="gif-column-header">Fluid dynamics</div>
-    <div class="gif-column-header">Optics</div>
-    <div class="gif-column-header">Thermodynamics</div>
-    <div class="gif-column-header">Magnetism</div>
-  </div>
   <div class="gif-grid">
     <div class="gif-cell">
+      <p>Solid mechanics</p>
       <img src="../assets/r11.gif" alt="GIF r11">
       <img src="../assets/r21.gif" alt="GIF r21">
     </div>
     <div class="gif-cell">
+      <p>Fluid dynamics</p>
       <img src="../assets/r12.gif" alt="GIF r12">
       <img src="../assets/r22.gif" alt="GIF r22">
     </div>
     <div class="gif-cell">
+      <p>Optics</p>
       <img src="../assets/r13.gif" alt="GIF r13">
       <img src="../assets/r23.gif" alt="GIF r23">
     </div>
     <div class="gif-cell">
+      <p>Thermodynamics</p>
       <img src="../assets/r14.gif" alt="GIF r14">
       <img src="../assets/r24.gif" alt="GIF r24">
     </div>
     <div class="gif-cell">
+      <p>Magnetism</p>
       <img src="../assets/r15.gif" alt="GIF r15">
       <img src="../assets/r25.gif" alt="GIF r25">
     </div>
