--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ body {
       <img src="../assets/r25.gif" alt="GIF r25">
     </div>
   </div>
-  <p>test test </p>
+  <p>Our benchmark tests the physics understanding of generative video models across 5 categories. </p>
 </div>
 
     
