--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -69,11 +69,11 @@
     <!-- Row 1 -->
     <div class="grid-item">
       <img src="../assets/vpb1.gif" alt="Best Performing Scenario">
-      <div class="text">"A white domino block is released above a mug of dark liquid."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpw1.gif" alt="Worst Performing Scenario">
-      <div class="text">"Juice being poured in a glass of water."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt1.gif" alt="Ground Truth">
@@ -87,11 +87,11 @@
     <!-- Row 2 -->
     <div class="grid-item">
       <img src="../assets/vpb2.gif" alt="Best Performing Scenario">
-      <div class="text">"A kettlebell is placed on a paper cup."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpw2.gif" alt="Worst Performing Scenario">
-      <div class="text">"A grey tennis ball rolls out of a black pipe."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt2.gif" alt="Ground Truth">
@@ -103,15 +103,15 @@
     </div>
 
     <!-- Row 3 and 4 Label -->
-    <div class="row-label">Worst performing model: Lumiere (i2v)</div>
+    <div class="row-label">Worst performing model: Sora (i2v)</div>
     <!-- Row 3 -->
     <div class="grid-item">
       <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
-      <div class="text">"Red liquid pouring in a glass."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumw1.gif" alt="Worst Performing Scenario">
-      <div class="text">"Juice being poured into a glass that is already filled up."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt1.gif" alt="Ground Truth">
@@ -125,11 +125,11 @@
     <!-- Row 4 -->
     <div class="grid-item">
       <img src="../assets/lumb2.gif" alt="Best Performing Scenario">
-      <div class="text">"A kettlebell is placed on a paper cup."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumw2.gif" alt="Worst Performing Scenario">
-      <div class="text">"A silk sheet being placed on a colorful ceramic teapot."</div>
+      <div class="text">""</div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt2.gif" alt="Ground Truth">
