--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -69,11 +69,11 @@
     <!-- Row 1 -->
     <div class="grid-item">
       <img src="../assets/vpb1.gif" alt="Best Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpw1.gif" alt="Worst Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt1.gif" alt="Ground Truth">
@@ -87,11 +87,11 @@
     <!-- Row 2 -->
     <div class="grid-item">
       <img src="../assets/vpb2.gif" alt="Best Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpw2.gif" alt="Worst Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt2.gif" alt="Ground Truth">
@@ -107,11 +107,11 @@
     <!-- Row 3 -->
     <div class="grid-item">
       <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumw1.gif" alt="Worst Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt1.gif" alt="Ground Truth">
@@ -125,11 +125,11 @@
     <!-- Row 4 -->
     <div class="grid-item">
       <img src="../assets/lumb2.gif" alt="Best Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumw2.gif" alt="Worst Performing Scenario">
-      <div class="text">""</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt2.gif" alt="Ground Truth">
