--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -59,10 +59,10 @@
   <div class="grid-container">
     <!-- Column Titles -->
     <div></div> <!-- Empty cell for row labels -->
-    <div class="column-title">Best Scenario</div>
-    <div class="column-title">Worst Scenario</div>
-    <div class="column-title">Ground Truth</div>
-    <div class="column-title">Ground Truth</div>
+    <div class="column-title">Success scenario</div>
+    <div class="column-title">Failure scenario</div>
+    <div class="column-title">Ground truth</div>
+    <div class="column-title">Ground truth</div>
 
     <!-- Row 1 and 2 Label -->
     <div class="row-label">Best performing model: VideoPoet (multiframe)</div>
@@ -103,22 +103,22 @@
     </div>
 
     <!-- Row 3 and 4 Label -->
-    <div class="row-label">Worst performing model: Sora (i2v)</div>
+    <div class="row-label">Second best performing model: Runway Gen 3 (i2v)</div>
     <!-- Row 3 -->
     <div class="grid-item">
-      <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
+      <img src="../assets/lumb1.gif" alt="Success scenario">
       <div class="text"></div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumw1.gif" alt="Worst Performing Scenario">
+      <img src="../assets/lumw1.gif" alt="Failure scenario">
       <div class="text"></div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumbgt1.gif" alt="Ground Truth">
+      <img src="../assets/lumbgt1.gif" alt="Ground truth">
       <div class="text"></div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumwgt1.gif" alt="Ground Truth">
+      <img src="../assets/lumwgt1.gif" alt="Ground truth">
       <div class="text"></div>
     </div>
 
