--- a/index.html
+++ b/index.html
@@ -468,10 +468,12 @@ body {
       </p>
     </div>
 
-
-  <div class="section-wrapper">
-    <p>On a run and want to get a gist of our paper? Listen to the following podcast 📻</p>
-  </div>
+    <div class="section-wrapper">
+      <h2>TL;DR</h2>
+      <p>
+        On a run and want to get a gist of our paper? Listen to the following podcast 📻
+      </p>
+    </div>
 <audio controls>
   <p>Listen to this cool episode o Physics-IQ benchmarking.</p>
   <source src="assets/pod.mp3" type="audio/mpeg">
