--- a/index.html
+++ b/index.html
@@ -468,14 +468,25 @@ body {
       </p>
     </div>
 
-    <div class="section-wrapper">
-      <h2>TL;DR</h2>
-      <p>
-        On a run and want to get a gist of our paper? Listen to the following podcast 📻
-      </p>
-    </div>
+    <style>
+  .section-wrapper {
+    display: flex; /* Enables flexbox */
+    justify-content: center; /* Horizontally centers the content */
+    align-items: center; /* Vertically centers the content */
+    height: 100vh; /* Makes the container fill the full viewport height */
+    text-align: center; /* Centers the text within the div */
+  }
+</style>
+
+<div class="section-wrapper">
+  <h2>Podcast 📻</h2>
+  <p>
+    On a run and want to get a gist of our paper? Listen to the following podcast
+  </p>
+</div>
+    
 <audio controls>
-  <p>Listen to this cool episode o Physics-IQ benchmarking.</p>
+  <p>Listen to this cool episode on Physics-IQ benchmarking.</p>
   <source src="assets/pod.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
