--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ body {
             <td>
               <!-- Add data-score attribute for hover tooltip -->
               <div class="progress">
-                <div class="progress-bar" style="width:20.7%;" data-score="20.7%"></div>
+                <div class="progress-bar" style="width:20.7%;" data-score="24.1  AWSEDRFTYGFRDE  %"></div>
               </div>
             </td>
           </tr>
@@ -663,23 +663,7 @@ body {
             <td>Runway Gen 3 (i2v)</td>
             <td>
               <div class="progress">
-                <div class="progress-bar" style="width:16.2%;" data-score="16.2%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>VideoPoet (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:15.7%;" data-score="15.7%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Stable Video Diffusion (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:15%;" data-score="15.0%"></div>
+                <div class="progress-bar" style="width:18.4%;" data-score="16.2%"></div>
               </div>
             </td>
           </tr>
@@ -687,23 +671,15 @@ body {
             <td>Lumiere (multiframe)</td>
             <td>
               <div class="progress">
-                <div class="progress-bar" style="width:11.9%;" data-score="11.9%"></div>
+                <div class="progress-bar" style="width:18.2%;" data-score="15.7%"></div>
               </div>
             </td>
           </tr>
           <tr>
-            <td>Pika 1.0 (i2v)</td>
+            <td>VideoPoet (i2v)</td>
             <td>
               <div class="progress">
-                <div class="progress-bar" style="width:10.9%;" data-score="10.9%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Sora (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:9.2%;" data-score="9.2%"></div>
+                <div class="progress-bar" style="width:15%;" data-score="18.0%"></div>
               </div>
             </td>
           </tr>
@@ -711,7 +687,31 @@ body {
             <td>Lumiere (i2v)</td>
             <td>
               <div class="progress">
-                <div class="progress-bar" style="width:8.8%;" data-score="8.8%"></div>
+                <div class="progress-bar" style="width:11.9%;" data-score="17.1%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>stable Video Diffusion (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:10.9%;" data-score="13.5%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Pika 1.0 (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:9.5%;" data-score="9.2%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Sora(i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:8.7%;" data-score="8.8%"></div>
               </div>
             </td>
           </tr>
