--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ body {
   background: #fff; /* Plain white background */
 }
 
+  .blue { color: #4285F4; } /* Blue */
+  .red { color: #EA4335; }  /* Red */
+  .yellow { color: #FBBC05; } /* Yellow */
+  .green { color: #34A853; } /* Green */
+    
  .gif-container {
   width: 100%;
   display: flex;
@@ -366,9 +371,24 @@ body {
           <a href="https://robertgeirhos.com/" target="_blank">Robert Geirhos</a><sup>2,†</sup>
       </div>
       <div class="affiliations">
-          <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
-          <strong>2:</strong> Google DeepMind
-      </div>
+  <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
+  <strong>2:</strong> 
+  <span class="blue">G</span>
+  <span class="red">o</span>
+  <span class="yellow">o</span>
+  <span class="blue">g</span>
+  <span class="green">l</span>
+  <span class="red">e</span> 
+  <span class="blue">D</span>
+  <span class="blue">e</span>
+  <span class="blue">e</span>
+  <span class="blue">p</span>
+  <span class="blue">M</span>
+  <span class="blue">i</span>
+  <span class="blue">n</span>
+  <span class="blue">d</span>
+</div>
+
       <div class="asterisk-note">
           * Work done while at Google DeepMind.<br>
           † Joint last authors.
