--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   padding: 0;
   height: 100%; 
 }
-
+.affiliations span {
+    display: inline; /* Ensure no additional spacing is introduced */
+    margin: 0;
+    padding: 0;
+  }
 body {
   min-height: 100vh;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -370,23 +374,11 @@ body {
           <a href="https://priyankjaini.github.io/" target="_blank">Priyank Jaini</a><sup>2,†</sup>, 
           <a href="https://robertgeirhos.com/" target="_blank">Robert Geirhos</a><sup>2,†</sup>
       </div>
-      <div class="affiliations">
+<div class="affiliations">
   <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
   <strong>2:</strong> 
-  <span class="blue">G</span>
-  <span class="red">o</span>
-  <span class="yellow">o</span>
-  <span class="blue">g</span>
-  <span class="green">l</span>
-  <span class="red">e</span> 
-  <span class="blue">D</span>
-  <span class="blue">e</span>
-  <span class="blue">e</span>
-  <span class="blue">p</span>
-  <span class="blue">M</span>
-  <span class="blue">i</span>
-  <span class="blue">n</span>
-  <span class="blue">d</span>
+  <span class="blue">G</span><span class="red">o</span><span class="yellow">o</span><span class="blue">g</span><span class="green">l</span><span class="red">e</span>
+  <span class="blue">D</span><span class="blue">e</span><span class="blue">e</span><span class="blue">p</span><span class="blue">M</span><span class="blue">i</span><span class="blue">n</span><span class="blue">d</span>
 </div>
 
       <div class="asterisk-note">
