--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ body {
       <div class="slide">
         
     <div class="real-video">
-          <img src="../weight/real_weight.gif" alt="Real Test Frames"></img>
+          <video src="../weight/real_weight.mp4" alt="Real Test Frames"></video>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -610,7 +610,7 @@ body {
       <!-- Slide for 'paint' folder -->
       <div class="slide">
     <div class="real-video">
-          <img src="../paint/real_paint.gif" alt="Real Test Frames"></img>
+          <video src="../paint/real_paint.mp4" alt="Real Test Frames"></video>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -646,7 +646,7 @@ body {
       <!-- Slide for 'teapot' folder -->
       <div class="slide">
     <div class="real-video">
-          <img src="../teapot/real_teapot.gif" alt="Real Test Frames"></img>
+          <video src="../teapot/real_teapot.mp4" alt="Real Test Frames"></video>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -682,7 +682,7 @@ body {
       <!-- Slide for 'match' folder -->
       <div class="slide">
     <div class="real-video">
-          <img src="../match/real_match.gif" alt="Real Test Frames"></img>
+          <video src="../match/real_match.mp4" alt="Real Test Frames"></video>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
