--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ body {
   }
 
   .real-video {
-    grid-column: 1 / -1; /* Span all columns for the real video */
+    max-width: 800px;
+  margin: 0 auto;
     justify-self: center; /* Center the real video horizontally */
   }
   
