--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@ body {
   }
 
   .real-video {
-    max-width: 800px;
-  margin: 0 auto;
-    justify-self: center; /* Center the real video horizontally */
-  }
+  max-width: 800px; /* Limit the width of the video */
+  margin: 0 auto; /* Center the video horizontally */
+  text-align: center; /* Center the content inside the div */
+}
+
   
 /* Individual video frame */
 .frame {
