--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ body {
       <div class="slide">
         
     <div class="real-video">
-          <video src="../weight/real_weight.mp4" controls autoplay loop muted></video>
+          <img src="../weight/real_weight.gif" ></img>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -612,7 +612,7 @@ body {
       <!-- Slide for 'paint' folder -->
       <div class="slide">
     <div class="real-video">
-          <video src="../paint/real_paint.mp4" controls autoplay loop muted></video>
+          <img src="../paint/real_paint.gif"></img>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -648,7 +648,7 @@ body {
       <!-- Slide for 'teapot' folder -->
       <div class="slide">
     <div class="real-video">
-          <video src="../teapot/real_teapot.mp4" controls autoplay loop muted"></video>
+          <img src="../teapot/real_teapot.gif" controls autoplay loop muted"></img>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
@@ -684,7 +684,7 @@ body {
       <!-- Slide for 'match' folder -->
       <div class="slide">
     <div class="real-video">
-          <video src="../match/real_match.mp4" controls autoplay loop muted></video>
+          <img src="../match/real_match.gif" ></img>
           <div class="caption">Real Test Frames</div>
         </div>
         <div class="frame">
