--- a/index.html
+++ b/index.html
@@ -296,10 +296,33 @@ body {
   }
 
   .real-video {
-  max-width: 800px; /* Limit the width of the video */
-  margin: 0 auto; /* Center the video horizontally */
-  text-align: center; /* Center the content inside the div */
+  display: flex;
+  justify-content: center; /* Center the real video horizontally */
+  align-items: center; /* Center the content vertically */
+  margin-bottom: 20px; /* Add space below the real video */
+  width: 100%;
 }
+
+.real-video img {
+  max-width: 800px; /* Set a maximum width for the real GIF */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 10px; /* Optional: Rounded corners */
+}
+
+.real-video .caption {
+  text-align: center;
+  font-size: 1rem;
+  color: #666;
+  margin-top: 5px;
+}
+
+.gif-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* Keep the grid for generated GIFs */
+  gap: 10px; /* Adjust spacing between GIFs */
+  justify-content: center; /* Center the grid horizontally */
+}
+
 
   
 /* Individual video frame */
