--- a/index.html
+++ b/index.html
@@ -592,46 +592,51 @@ body {
     <h2>Examples 🎞️</h2>
   </div>
 
-  <!-- Navigation and Video Samples -->
-  <div class="video-samples">
-    <div class="slide-container">
-      <!-- Slide for 'weight' folder -->
-      <div class="slide">
-        
-    <div class="real-video">
-          <img src="../weight/real_weight.gif" ></img>
-          <div class="caption">Real Test Frames</div>
-        </div>
+ <!-- Navigation and Video Samples -->
+<div class="video-samples">
+  <div class="slide-container">
+    <!-- Slide for 'weight' folder -->
+    <div class="slide">
+      <!-- Real GIF -->
+      <div class="real-video">
+        <img src="../weight/real_weight.gif" alt="Real Test Frames">
+        <div class="caption">Real Test Frames</div>
+      </div>
+
+      <!-- Generated GIFs -->
+      <div class="gif-grid">
         <div class="frame">
-          <img src="../weight/vp_m_weight.gif" alt="VideoPoet (multiframe)"></img>
+          <img src="../weight/vp_m_weight.gif" alt="VideoPoet (multiframe)">
           <div class="caption">VideoPoet (multiframe)</div>
         </div>
         <div class="frame">
-          <img src="../weight/vp_i2v_weight.gif" alt="VideoPoet (i2v)"></img>
+          <img src="../weight/vp_i2v_weight.gif" alt="VideoPoet (i2v)">
           <div class="caption">VideoPoet (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../weight/sora_weight.gif" alt="Sora (i2v)"></img>
+          <img src="../weight/sora_weight.gif" alt="Sora (i2v)">
           <div class="caption">Sora (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../weight/pika_weight.gif" alt="Pika 1.0 (i2v)"></img>
+          <img src="../weight/pika_weight.gif" alt="Pika 1.0 (i2v)">
           <div class="caption">Pika 1.0 (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../weight/runway_weight.gif" alt="Runway Gen 3 (i2v)"></img>
+          <img src="../weight/runway_weight.gif" alt="Runway Gen 3 (i2v)">
           <div class="caption">Runway Gen 3 (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../weight/lum_m_weight.gif" alt="Lumiere (multiframe)"></img>
+          <img src="../weight/lum_m_weight.gif" alt="Lumiere (multiframe)">
           <div class="caption">Lumiere (multiframe)</div>
         </div>
         <div class="frame">
-          <img src="../weight/lum_i2v_weight.gif" alt="Lumiere (i2v)"></img>
+          <img src="../weight/lum_i2v_weight.gif" alt="Lumiere (i2v)">
           <div class="caption">Lumiere (i2v)</div>
         </div>
       </div>
+    </div>
 
+    
       <!-- Slide for 'paint' folder -->
       <div class="slide">
     <div class="real-video">
